<resources>
    <string name="app_name">Thingie</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="help">Help</string>
    <string name="not_registered">Not Registered?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">REGISTER</string>
    <string-array name="security_questions">
        <item>"What is your nickname?"</item>
        <item>"What is the name of your first pet?"</item>
        <item>"What is the name of your father?"</item>
        <item>"What is the name of your mother?"</item>
        <item>"What is the name of your eldest sibling?"</item>
        <item>"What is the name of your youngest sibling?"</item>
        <item>"What is the name of your best friend?"</item>
    </string-array>
</resources>