<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />
        <ImageView
            android:id="@+id/login1_imageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/flower" />
        <ImageView
            android:id="@+id/login2_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop = "25dp"
            android:background="@drawable/flower" />
        <ImageView
            android:id="@+id/login3_imageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/flower" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_textView"
        android:layout_gravity="center"
        android:layout_below="@id/login1_imageView"
        android:padding="@dimen/size_10sp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="@dimen/size_40sp"
        android:layout_marginTop="@dimen/size_30sp"
        android:textColor="@color/text"
        android:fontFamily="casual"
        android:layout_margin="@dimen/size_20dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_editText"
        android:hint="@string/username"
        android:layout_below="@id/login_textView"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/size_10sp"
        android:textSize="@dimen/size_20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20sp"
        android:padding="@dimen/size_10sp"
        tools:ignore="Autofill"
        android:inputType="text"
        android:fontFamily="casual"
        android:textColor="@color/text"
        android:layout_margin="@dimen/size_20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_editText"
        android:hint="@string/password"
        android:layout_below="@id/username_editText"
        android:textSize="@dimen/size_20sp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/size_10sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20sp"
        android:padding="@dimen/size_10sp"
        android:inputType="textPassword"
        tools:ignore="Autofill"
        android:textColor="@color/text"
        android:fontFamily="casual"
        android:layout_margin="@dimen/size_20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:layout_below="@id/password_editText"
        android:backgroundTint="@color/black"
        android:text="@string/confirm"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/yellow"
        android:onClick="Confirm"
        android:padding="@dimen/size_10sp"
        android:fontFamily="casual"
        android:layout_margin="@dimen/size_20dp"/>

    <TextView
        android:id="@+id/forgotPassword_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_button"
        android:layout_centerInParent="true"
        android:fontFamily="casual"
        android:onClick="ForgotPassword"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="@dimen/size_20sp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_20dp"
        android:layout_marginBottom="@dimen/size_20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/notRegistered_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/white"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingEnd="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_15sp"
            android:text="@string/not_registered"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="@dimen/size_15sp" />

        <TextView
            android:id="@+id/createAccount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/notRegistered_textView"
            android:backgroundTint="@color/white"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_15sp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="@dimen/size_15sp" />
    </RelativeLayout>
    </RelativeLayout>